# gears-core-rust

./: .clog.toml  .gdb_history  .gitignore  .travis.yml  :w  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  index.html  update_basic_project.sh
.art/: settings.toml
.github/: dependabot.yml
data/bad_flows/: bad_capabilities.json  double_variables_per_scope.json  edges_without_nodes.json  empty.json  multiple_entry_nodes.json  no_entry_nodes.json  no_terminal_nodes.json  orphan_node.json  output_variable_type_mismatch.json  redefined_local_variables.json  unreferenced_variables.json  unreferenced_variables_in_flox.json
data/capability_flows/: add_1.json  xflow-call-xflow-3x.json  xflow-call-xflow-indirect.json  xflow-call-xflow.json
data/flows/: 10_steps.json  arithmetic_addition.json  arithmetic_addition_multiple_return_values.json  arithmetic_addition_with_variables.json  branch_boolean.json  branch_boolean_and_expressions_return.json  branch_boolean_condition.json  create_object.json  loop_5x.json  loop_infinite.json
data/invalid_flows/: bad_structure.json  identical_id_nodes.json
data/schemas/: xflow-schema.js  xflow-schema.json
design/: purpose.toml  requirements.toml  specification.toml  tests.toml
resource/dsl/: basic.gears-dsl
scripts/: test_dotfile.sh  update_basic_project.sh  update_random_project.sh
src/: dispatcher.rs  docstore.rs  embed.rs  errors.rs  flox.rs  flox_grammar.rustpeg  lib.rs  main.rs  validation.rs  xfrunner.rs  xfstate.rs  xfstruct.rs
src/actiondispatch/: dispatchable.rs  flow.rs  flox.rs
src/data/: common.rs  mod.rs
src/dsl/: command.rs  command_grammar.rustpeg
src/generation/: domain_to_dot.rs  mod.rs  page_to_react_component.rs  page_to_vue_template.rs  react_component.rs  vue_form.rs  (+2 more)
tests/: flox_test.rs  helper.rs  helper.rs.bk  lib.rs  mod.rs  struct.rs  test_dsl.rs  test_dsl_domain.rs  test_dsl_model.rs  test_dsl_translation.rs  test_generation_domain_to_dot.rs  test_generation_page_to_react_component.rs  test_generation_page_to_vue_template.rs  test_generation_vue_form.rs  test_generation_xflow_to_dot.rs  test_generation_xflow_to_es5.rs  test_structure_domain.rs  test_structure_form.rs  test_structure_model.rs  test_structure_translation.rs  test_translate.rs  test_util_fs.rs  test_validation.rs  test_xflow.rs  validation.rs  xflow_load.rs  xflow_run_001.rs  xflow_validation.rs  xflow_validation.rs.bk  xfstate.rs
(+130 files in other folders)
