[package]
name = "xflow"
version = "0.1.1"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
description = "XFlow implementation"
documentation = "https://docs.rs/xflow"
homepage = "https://github.com/nosuchtype/xflow-rust"
repository = "https://github.com/nosuchtype/xflow-rust.git"
readme = "README.md"
keywords = ["xflow"]
categories = []
license = "MIT"
build = "build.rs"

[lib]
name = "xflow"
crate-type = ["rlib", "dylib"] # staticlib, bin

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
log = "0.3"
glob = "0.2.11"
ratel = "0.7.0"

[dev-dependencies]
env_logger = "0.4"
tempdir =  "0.3"

[build-dependencies]
peg = { version = "0.5" }

