[package]
name = "gears"
version = "0.1.4"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
description = "Gears core implementation"
documentation = "https://docs.rs/gears"
homepage = "https://github.com/gears-project/gears-core-rust"
repository = "https://github.com/gears-project/gears-core-rust.git"
readme = "README.md"
keywords = ["gears"]
categories = []
license = "MIT"
build = "build.rs"

[lib]
name = "gears"
crate-type = ["rlib", "dylib"] # staticlib, bin

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
log = "0.3"
glob = "0.2.11"
ratel = "0.7.0"
uuid = { version = "0.5", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = "0.4"
tempdir =  "0.3"

[build-dependencies]
peg = { version = "0.5" }

